deployments/uptime-kuma/uptime-kuma.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: default
  labels:
    app.kubernetes.io/name: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptime-kuma
    spec:
      tolerations:
        - key: "node.kubernetes.io/disk-pressure"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 300
      serviceAccountName: app
      hostNetwork: true
      imagePullSecrets:
        - name: regcred
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: uptime-kuma-config
              mountPath: /app/data
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
      volumes:
        - name: uptime-kuma-config
          persistentVolumeClaim:
            claimName: uptime-kuma-pv-claim
