deployments/uptime-kuma/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: default
  labels:
    app.kubernetes.io/name: uptime-kuma
spec:
  type: NodePort
  ports:
    - name: http
      port: 3001
      targetPort: http
  selector:
    app.kubernetes.io/name: uptime-kuma
