deployments/uptime-kuma/ingress-prod.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /status
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: uptime-kuma
  namespace: default
spec:
  tls:
    - hosts:
        - $STATUS_DOMAIN
      secretName: uptime-kuma-tls
  rules:
    - host: $STATUS_DOMAIN
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma-web
                port:
                  number: 3001
